AppMenu: Don't call AboutToShow on LayoutUpdated

This workaround breaks applications that rely on aboutToShow/aboutToHide
signals, because it sends aboutToShow to all menus on startup without actually
the menu being opened.

BUG: 375053
FIXED-IN: 5.11.0

Differential Revision: https://phabricator.kde.org/D5705